--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 
 html {
   overflow: hidden;
-  background: #f5f5f5 url(/assets/background.png);
+  background: #f5f5f5 url(./assets/background.png);
   font-family: 'Roboto', sans-serif;
 }
 body {
